--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp": "^3.9.0",
     "gulp-watch": "^4.3.5",
     "gulp-typescript": "^2.12.1",
-    "screeps-typescript-declarations": "^1.5.2"
+    "screeps-typescript-declarations": "^1.5.2",
+    "git-rev": "^0.2.1"
   }
 }
